test/Fail/Issue3660.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  path (f x) (?0 (f = f) (x = x) (i = i1)) = c (f x) : D B
    (blocked on _12)
  path (f x) (?0 (f = f) (x = x) (i = i0)) = c (f x) : D B
    (blocked on _12)

Issue3660.agda:15.31-35: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue3660.agda:15.31-35
